clusters/titania/apps/torrents/seerr/seerr-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: seerr
spec:
  selector:
    app: seerr
  type: ClusterIP
  ports:
    - port: 5055
      targetPort: 5055
